# model_v1_global_turn_response.go
@@ -15,280 +15,100 @@ import (
 	"encoding/json"
 )
 
-// V1Accelerator struct for V1Accelerator
-type V1Accelerator struct {
-	DestinationIp *string `json:"destination_ip,omitempty"`
-	DestinationPort *int64 `json:"destination_port,omitempty"`
-	Id *string `json:"id,omitempty"`
-	Name *string `json:"name,omitempty"`
-	SubspaceIpv4 *string `json:"subspace_ipv4,omitempty"`
-	SubspacePort *int64 `json:"subspace_port,omitempty"`
+// V1GlobalTurnResponse struct for V1GlobalTurnResponse
+type V1GlobalTurnResponse struct {
+	IceServers *[]V1GlobalTurnServer `json:"ice_servers,omitempty"`
 }
 
-// NewV1Accelerator instantiates a new V1Accelerator object
+// NewV1GlobalTurnResponse instantiates a new V1GlobalTurnResponse object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewV1Accelerator() *V1Accelerator {
-	this := V1Accelerator{}
+func NewV1GlobalTurnResponse() *V1GlobalTurnResponse {
+	this := V1GlobalTurnResponse{}
 	return &this
 }
 
-// NewV1AcceleratorWithDefaults instantiates a new V1Accelerator object
+// NewV1GlobalTurnResponseWithDefaults instantiates a new V1GlobalTurnResponse object
 // This constructor will only assign default values to properties that have it defined,
 // but it doesn't guarantee that properties required by API are set
-func NewV1AcceleratorWithDefaults() *V1Accelerator {
-	this := V1Accelerator{}
+func NewV1GlobalTurnResponseWithDefaults() *V1GlobalTurnResponse {
+	this := V1GlobalTurnResponse{}
 	return &this
 }
 
-// GetDestinationIp returns the DestinationIp field value if set, zero value otherwise.
-func (o *V1Accelerator) GetDestinationIp() string {
-	if o == nil || o.DestinationIp == nil {
-		var ret string
+// GetIceServers returns the IceServers field value if set, zero value otherwise.
+func (o *V1GlobalTurnResponse) GetIceServers() []V1GlobalTurnServer {
+	if o == nil || o.IceServers == nil {
+		var ret []V1GlobalTurnServer
 		return ret
 	}
-	return *o.DestinationIp
+	return *o.IceServers
 }
 
-// GetDestinationIpOk returns a tuple with the DestinationIp field value if set, nil otherwise
+// GetIceServersOk returns a tuple with the IceServers field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *V1Accelerator) GetDestinationIpOk() (*string, bool) {
-	if o == nil || o.DestinationIp == nil {
+func (o *V1GlobalTurnResponse) GetIceServersOk() (*[]V1GlobalTurnServer, bool) {
+	if o == nil || o.IceServers == nil {
 		return nil, false
 	}
-	return o.DestinationIp, true
+	return o.IceServers, true
 }
 
-// HasDestinationIp returns a boolean if a field has been set.
-func (o *V1Accelerator) HasDestinationIp() bool {
-	if o != nil && o.DestinationIp != nil {
+// HasIceServers returns a boolean if a field has been set.
+func (o *V1GlobalTurnResponse) HasIceServers() bool {
+	if o != nil && o.IceServers != nil {
 		return true
 	}
 
 	return false
 }
 
-// SetDestinationIp gets a reference to the given string and assigns it to the DestinationIp field.
-func (o *V1Accelerator) SetDestinationIp(v string) {
-	o.DestinationIp = &v
+// SetIceServers gets a reference to the given []V1GlobalTurnServer and assigns it to the IceServers field.
+func (o *V1GlobalTurnResponse) SetIceServers(v []V1GlobalTurnServer) {
+	o.IceServers = &v
 }
 
-// GetDestinationPort returns the DestinationPort field value if set, zero value otherwise.
-func (o *V1Accelerator) GetDestinationPort() int64 {
-	if o == nil || o.DestinationPort == nil {
-		var ret int64
-		return ret
-	}
-	return *o.DestinationPort
-}
-
-// GetDestinationPortOk returns a tuple with the DestinationPort field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *V1Accelerator) GetDestinationPortOk() (*int64, bool) {
-	if o == nil || o.DestinationPort == nil {
-		return nil, false
-	}
-	return o.DestinationPort, true
-}
-
-// HasDestinationPort returns a boolean if a field has been set.
-func (o *V1Accelerator) HasDestinationPort() bool {
-	if o != nil && o.DestinationPort != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetDestinationPort gets a reference to the given int64 and assigns it to the DestinationPort field.
-func (o *V1Accelerator) SetDestinationPort(v int64) {
-	o.DestinationPort = &v
-}
-
-// GetId returns the Id field value if set, zero value otherwise.
-func (o *V1Accelerator) GetId() string {
-	if o == nil || o.Id == nil {
-		var ret string
-		return ret
-	}
-	return *o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *V1Accelerator) GetIdOk() (*string, bool) {
-	if o == nil || o.Id == nil {
-		return nil, false
-	}
-	return o.Id, true
-}
-
-// HasId returns a boolean if a field has been set.
-func (o *V1Accelerator) HasId() bool {
-	if o != nil && o.Id != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetId gets a reference to the given string and assigns it to the Id field.
-func (o *V1Accelerator) SetId(v string) {
-	o.Id = &v
-}
-
-// GetName returns the Name field value if set, zero value otherwise.
-func (o *V1Accelerator) GetName() string {
-	if o == nil || o.Name == nil {
-		var ret string
-		return ret
-	}
-	return *o.Name
-}
-
-// GetNameOk returns a tuple with the Name field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *V1Accelerator) GetNameOk() (*string, bool) {
-	if o == nil || o.Name == nil {
-		return nil, false
-	}
-	return o.Name, true
-}
-
-// HasName returns a boolean if a field has been set.
-func (o *V1Accelerator) HasName() bool {
-	if o != nil && o.Name != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetName gets a reference to the given string and assigns it to the Name field.
-func (o *V1Accelerator) SetName(v string) {
-	o.Name = &v
-}
-
-// GetSubspaceIpv4 returns the SubspaceIpv4 field value if set, zero value otherwise.
-func (o *V1Accelerator) GetSubspaceIpv4() string {
-	if o == nil || o.SubspaceIpv4 == nil {
-		var ret string
-		return ret
-	}
-	return *o.SubspaceIpv4
-}
-
-// GetSubspaceIpv4Ok returns a tuple with the SubspaceIpv4 field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *V1Accelerator) GetSubspaceIpv4Ok() (*string, bool) {
-	if o == nil || o.SubspaceIpv4 == nil {
-		return nil, false
-	}
-	return o.SubspaceIpv4, true
-}
-
-// HasSubspaceIpv4 returns a boolean if a field has been set.
-func (o *V1Accelerator) HasSubspaceIpv4() bool {
-	if o != nil && o.SubspaceIpv4 != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetSubspaceIpv4 gets a reference to the given string and assigns it to the SubspaceIpv4 field.
-func (o *V1Accelerator) SetSubspaceIpv4(v string) {
-	o.SubspaceIpv4 = &v
-}
-
-// GetSubspacePort returns the SubspacePort field value if set, zero value otherwise.
-func (o *V1Accelerator) GetSubspacePort() int64 {
-	if o == nil || o.SubspacePort == nil {
-		var ret int64
-		return ret
-	}
-	return *o.SubspacePort
-}
-
-// GetSubspacePortOk returns a tuple with the SubspacePort field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *V1Accelerator) GetSubspacePortOk() (*int64, bool) {
-	if o == nil || o.SubspacePort == nil {
-		return nil, false
-	}
-	return o.SubspacePort, true
-}
-
-// HasSubspacePort returns a boolean if a field has been set.
-func (o *V1Accelerator) HasSubspacePort() bool {
-	if o != nil && o.SubspacePort != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetSubspacePort gets a reference to the given int64 and assigns it to the SubspacePort field.
-func (o *V1Accelerator) SetSubspacePort(v int64) {
-	o.SubspacePort = &v
-}
-
-func (o V1Accelerator) MarshalJSON() ([]byte, error) {
+func (o V1GlobalTurnResponse) MarshalJSON() ([]byte, error) {
 	toSerialize := map[string]interface{}{}
-	if o.DestinationIp != nil {
-		toSerialize["destination_ip"] = o.DestinationIp
-	}
-	if o.DestinationPort != nil {
-		toSerialize["destination_port"] = o.DestinationPort
-	}
-	if o.Id != nil {
-		toSerialize["id"] = o.Id
-	}
-	if o.Name != nil {
-		toSerialize["name"] = o.Name
-	}
-	if o.SubspaceIpv4 != nil {
-		toSerialize["subspace_ipv4"] = o.SubspaceIpv4
-	}
-	if o.SubspacePort != nil {
-		toSerialize["subspace_port"] = o.SubspacePort
+	if o.IceServers != nil {
+		toSerialize["ice_servers"] = o.IceServers
 	}
 	return json.Marshal(toSerialize)
 }
 
-type NullableV1Accelerator struct {
-	value *V1Accelerator
+type NullableV1GlobalTurnResponse struct {
+	value *V1GlobalTurnResponse
 	isSet bool
 }
 
-func (v NullableV1Accelerator) Get() *V1Accelerator {
+func (v NullableV1GlobalTurnResponse) Get() *V1GlobalTurnResponse {
 	return v.value
 }
 
-func (v *NullableV1Accelerator) Set(val *V1Accelerator) {
+func (v *NullableV1GlobalTurnResponse) Set(val *V1GlobalTurnResponse) {
 	v.value = val
 	v.isSet = true
 }
 
-func (v NullableV1Accelerator) IsSet() bool {
+func (v NullableV1GlobalTurnResponse) IsSet() bool {
 	return v.isSet
 }
 
-func (v *NullableV1Accelerator) Unset() {
+func (v *NullableV1GlobalTurnResponse) Unset() {
 	v.value = nil
 	v.isSet = false
 }
 
-func NewNullableV1Accelerator(val *V1Accelerator) *NullableV1Accelerator {
-	return &NullableV1Accelerator{value: val, isSet: true}
+func NewNullableV1GlobalTurnResponse(val *V1GlobalTurnResponse) *NullableV1GlobalTurnResponse {
+	return &NullableV1GlobalTurnResponse{value: val, isSet: true}
 }
 
-func (v NullableV1Accelerator) MarshalJSON() ([]byte, error) {
+func (v NullableV1GlobalTurnResponse) MarshalJSON() ([]byte, error) {
 	return json.Marshal(v.value)
 }
 
-func (v *NullableV1Accelerator) UnmarshalJSON(src []byte) error {
+func (v *NullableV1GlobalTurnResponse) UnmarshalJSON(src []byte) error {
 	v.isSet = true
 	return json.Unmarshal(src, &v.value)
 }
